--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "dependencies": {
     "css-loader": "^0.21.0",
     "history": "^1.13.0",
-    "material-ui": "^0.13.1",
+    "material-ui": "^0.14.0-rc1",
     "react": "^0.14.0",
     "react-addons-create-fragment": "^0.14.1",
     "react-addons-pure-render-mixin": "^0.14.1",
